--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
 	<title>Star Wars RPG Game</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script type="text/javascript" src="assets/javascript/jquery-3.1.1.min.js"></script>
 </head>
 <body>
+
+	<section id="hero">
+		<h1>Hero:</h1>
+		<div class="charContainer">
+		</div>
+	</section>
+	<section id="enemies">
+		<h1>All Characters:</h1>
+		<div class="charContainer">
+		<!-- I decided to have the character stats set in the HTML so you can
+		customize the gameplay and add more characters without messing with the script -->
+			<div class="character" data-char="0" data-ap="10" data-hp="100" data-cap="40">Character 0</div>
+			<div class="character" data-char="1" data-ap="20" data-hp="200" data-cap="50">Character 1</div>
+			<div class="character" data-char="2" data-ap="30" data-hp="300" data-cap="60">Character 2</div>
+			<div class="character" data-char="3" data-ap="40" data-hp="400" data-cap="70">Character 3</div>
+		</div>
+		
+	</section>
+	<section id="opponent">
+		<h1>Currently Fighting:</h1>
+		<div class="charContainer">
+		</div>
+		<button>Attack!</button>
+	</section>
 		
 	<footer>
 	Game created by Jesse Harold, 2016
