halfway through game logic

--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
 		<div class="charContainer">
 		<!-- I decided to have the character stats set in the HTML so you can
 		customize the gameplay and add more characters without messing with the script -->
-			<div class="character" data-char="0" data-ap="10" data-hp="100" data-cap="40">Character 0</div>
-			<div class="character" data-char="1" data-ap="20" data-hp="200" data-cap="50">Character 1</div>
-			<div class="character" data-char="2" data-ap="30" data-hp="300" data-cap="60">Character 2</div>
-			<div class="character" data-char="3" data-ap="40" data-hp="400" data-cap="70">Character 3</div>
+			<div class="character" data-char="0" data-ap="10" data-hp="100" data-cap="40">
+				Character 0
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="1" data-ap="20" data-hp="200" data-cap="50">
+				Character 1
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="2" data-ap="30" data-hp="300" data-cap="60">
+				Character 2
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="3" data-ap="40" data-hp="400" data-cap="70">
+				Character 3
+				<div class="stats"></div>
+			</div>
 		</div>
 		
 	</section>
@@ -29,7 +41,7 @@
 		<h1>Currently Fighting:</h1>
 		<div class="charContainer">
 		</div>
-		<button>Attack!</button>
+		<button id="attack">Attack!</button>
 	</section>
 		
 	<footer>
