adding basic layout in css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Star Wars RPG Game</title>
+	<title>Game of Thrones RPG Game</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="assets/javascript/jquery-3.1.1.min.js"></script>
 </head>
 <body>
 
-	<section id="hero">
-		<h1>Hero:</h1>
-		<div class="charContainer">
-		</div>
-	</section>
 	<section id="enemies">
 		<h1>All Characters:</h1>
 		<div class="charContainer">
@@ -35,13 +30,23 @@
 				<div class="stats"></div>
 			</div>
 		</div>
-		
+	</section>
+	<section id="hero">
+		<h1>Hero:</h1>
+		<div class="charContainer">
+		</div>
+	</section>
+	<section id="controls">
+		<button id="attack">Attack!</button>
+		<button id="newGame">Play Again</button>
 	</section>
 	<section id="opponent">
 		<h1>Currently Fighting:</h1>
 		<div class="charContainer">
 		</div>
-		<button id="attack">Attack!</button>
+	</section>
+	<section id="message">
+		How to play the game instructions go here.
 	</section>
 		
 	<footer>
