added character names

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 		<div class="charContainer">
 		<!-- I decided to have the character stats set in the HTML so you can
 		customize the gameplay and add more characters without messing with the script -->
-			<div class="character" data-char="0" data-ap="10" data-hp="100" data-cap="40">
-				Character 0
+			<div class="character" data-char="0" data-ap="12" data-hp="100" data-cap="40">
+				Joe
 				<div class="stats"></div>
 			</div>
-			<div class="character" data-char="1" data-ap="20" data-hp="200" data-cap="50">
-				Character 1
+			<div class="character" data-char="1" data-ap="15" data-hp="115" data-cap="50">
+				Sue
 				<div class="stats"></div>
 			</div>
-			<div class="character" data-char="2" data-ap="30" data-hp="300" data-cap="60">
-				Character 2
+			<div class="character" data-char="2" data-ap="18" data-hp="150" data-cap="60">
+				Remy
 				<div class="stats"></div>
 			</div>
-			<div class="character" data-char="3" data-ap="40" data-hp="400" data-cap="70">
-				Character 3
+			<div class="character" data-char="3" data-ap="21" data-hp="185" data-cap="70">
+				Paul
 				<div class="stats"></div>
 			</div>
 		</div>
@@ -48,9 +48,9 @@
 		<div class="charContainer">
 		</div>
 	</section>
-	
+
 	<section id="message">
-		How to play the game instructions go here.
+		To begin the game, choose your hero from the left.
 	</section>
 		
 	<footer>
