added portrait images

--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
 		<!-- I decided to have the character stats set in the HTML so you can
 		customize the gameplay and add more characters without messing with the script -->
 			<div class="character" data-char="0" data-ap="6" data-hp="100" data-cap="4">
-				Joe
+				<div class="portrait"><img src="assets/images/chars/605_Theon_Promo_new.jpg"></div>
+				Theon Greyjoy
 				<div class="stats"></div>
 			</div>
 			<div class="character" data-char="1" data-ap="7" data-hp="115" data-cap="6">
-				Sue
+				<div class="portrait"><img src="assets/images/chars/6x07_Blackfish.png"></div>
+				Brynden "Blackfish" Tully
 				<div class="stats"></div>
 			</div>
 			<div class="character" data-char="2" data-ap="12" data-hp="130" data-cap="8">
-				Remy
+				<div class="portrait"><img src="assets/images/chars/Arya6x10.png"></div>
+				Arya Stark
 				<div class="stats"></div>
 			</div>
 			<div class="character" data-char="3" data-ap="18" data-hp="145" data-cap="11">
-				Paul
+				<div class="portrait"><img src="assets/images/chars/Barristan_Selmy_Sons_of_the_Harpy.jpg"></div>
+				Barristan "The Bold" Selmy
 				<div class="stats"></div>
 			</div>
 		</div>
