adding more characters, adjusting image display

--- a/index.html
+++ b/index.html
@@ -33,6 +33,66 @@
 				Barristan "The Bold" Selmy
 				<div class="stats"></div>
 			</div>
+			<div class="character" data-char="4" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Battle_of_the_Bastards_08.jpg"></div>
+				Jon Snow
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="5" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Bronn_the_broken_man_s6.jpg"></div>
+				Bronn
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="6" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Drogo_1x01b.jpg"></div>
+				Khal Drogo
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="7" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Eddard_Stark_infobox_new.jpg"></div>
+				Ned Stark
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="8" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Jaime_s6_Ep08_.jpg"></div>
+				Ser Jaime Lannister
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="9" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Petyr_Battle_of_Bastards_infobox_image.jpg"></div>
+				Peytr "Littlefinger" Baelish
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="10" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Renly_profile.jpg"></div>
+				Renly Baratheon
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="11" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Oberyn-Martell-house-martell-37118334-2832-4256.jpg"></div>
+				Oberyn Martell
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="12" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Sandor_s6_No_One_infobox.jpg"></div>
+				Sandor "The Hound" Clegane
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="13" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Ellaria-Sand-Game-of-Thrones_S6_finale.jpg"></div>
+				Ellaria Sand
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="14" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Ygritte_season_4_promo_better_quality.jpg"></div>
+				Ygritte
+				<div class="stats"></div>
+			</div>
+			<div class="character" data-char="15" data-ap="18" data-hp="145" data-cap="11">
+				<div class="portrait"><img src="assets/images/chars/Tyrion6x082.png"></div>
+				Tyrion Lannister
+				<div class="stats"></div>
+			</div>
 		</div>
 	</section>
 
