moved character library to separate .js file, made the game chose random subset for each game

--- a/index.html
+++ b/index.html
@@ -13,84 +13,9 @@
 		<div class="charContainer">
 		<!-- I decided to have the character stats set in the HTML so you can
 		customize the gameplay and add more characters without messing with the script -->
-			<div class="character" data-char="0" data-ap="6" data-hp="100" data-cap="4">
-				<div class="portrait"><img src="assets/images/chars/605_Theon_Promo_new.jpg"></div>
-				Theon Greyjoy
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="1" data-ap="7" data-hp="115" data-cap="6">
-				<div class="portrait"><img src="assets/images/chars/6x07_Blackfish.png"></div>
-				Brynden "Blackfish" Tully
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="2" data-ap="12" data-hp="130" data-cap="8">
-				<div class="portrait"><img src="assets/images/chars/Arya6x10.png"></div>
-				Arya Stark
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="3" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Barristan_Selmy_Sons_of_the_Harpy.jpg"></div>
-				Barristan "The Bold" Selmy
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="4" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Battle_of_the_Bastards_08.jpg"></div>
-				Jon Snow
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="5" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Bronn_the_broken_man_s6.jpg"></div>
-				Bronn
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="6" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Drogo_1x01b.jpg"></div>
-				Khal Drogo
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="7" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Eddard_Stark_infobox_new.jpg"></div>
-				Ned Stark
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="8" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Jaime_s6_Ep08_.jpg"></div>
-				Ser Jaime Lannister
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="9" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Petyr_Battle_of_Bastards_infobox_image.jpg"></div>
-				Peytr "Littlefinger" Baelish
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="10" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Renly_profile.jpg"></div>
-				Renly Baratheon
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="11" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Oberyn-Martell-house-martell-37118334-2832-4256.jpg"></div>
-				Oberyn Martell
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="12" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Sandor_s6_No_One_infobox.jpg"></div>
-				Sandor "The Hound" Clegane
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="13" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Ellaria-Sand-Game-of-Thrones_S6_finale.jpg"></div>
-				Ellaria Sand
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="14" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Ygritte_season_4_promo_better_quality.jpg"></div>
-				Ygritte
-				<div class="stats"></div>
-			</div>
-			<div class="character" data-char="15" data-ap="18" data-hp="145" data-cap="11">
-				<div class="portrait"><img src="assets/images/chars/Tyrion6x082.png"></div>
-				Tyrion Lannister
+			<div class="character" id="blank">
+				<div class="portrait"></div>
+				<div class="name"></div>
 				<div class="stats"></div>
 			</div>
 		</div>
@@ -123,5 +48,6 @@
 
 
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<script type="text/javascript" src="assets/javascript/character-library.js"></script>
 </body>
 </html>
