--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title>Game of Thrones RPG Game</title>
+	<link href="https://fonts.googleapis.com/css?family=Bitter|Quintessential" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="assets/javascript/jquery-3.1.1.min.js"></script>
 </head>
 <body>
-
+<h1>RPG of Thrones</h1>
 	<section id="enemies">
-		<h1>All Characters:</h1>
+		<h2>Characters:</h2>
 		<div class="charContainer">
 		<!-- I decided to have the character stats set in the HTML so you can
 		customize the gameplay and add more characters without messing with the script -->
@@ -22,7 +23,7 @@
 	</section>
 
 	<section id="hero">
-		<h1>Hero:</h1>
+		<h2>Hero:</h2>
 		<div class="charContainer">
 		</div>
 	</section>
@@ -33,7 +34,7 @@
 	</section>
 
 	<section id="opponent">
-		<h1>Currently Fighting:</h1>
+		<h2>Opponent:</h2>
 		<div class="charContainer">
 		</div>
 	</section>
