more style fixes, add bg image

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
 	</section>
 
 	<section id="message">
-		To begin the game, choose your hero from the left.
+		To begin the game, choose your hero from the characters.
+
+		<footer>
+		Game created by Jesse Harold, 2016<br>
+		Background Art by Mark Evans
+		</footer>
 	</section>
-		
-	<footer>
-	Game created by Jesse Harold, 2016
-	</footer>
+
 
 
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
