--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 	<section id="enemies">
 		<h2>Characters:</h2>
 		<div class="charContainer">
-		<!-- I decided to have the character stats set in the HTML so you can
-		customize the gameplay and add more characters without messing with the script -->
+		<!-- This blank character is cloned and populated with data by the script -->
 			<div class="character" id="blank">
 				<div class="portrait"></div>
 				<div class="name"></div>
@@ -47,8 +46,6 @@
 		Background Art by Mark Evans
 		</footer>
 	</section>
-
-
 
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 	<script type="text/javascript" src="assets/javascript/character-library.js"></script>
