made attack button an arrow

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</section>
 
 	<section id="controls">
-		<button id="attack">Attack!</button>
+		<button id="attack" class="arrow_box">Attack!</button>
 		<button id="newGame">Play Again</button>
 	</section>
 
