--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <h1>RPG of Thrones</h1>
 	<section id="enemies">
+		<div class="sectionBG">&nbsp;</div>
 		<h2>Characters:</h2>
 		<div class="charContainer">
 		<!-- This blank character is cloned and populated with data by the script -->
@@ -22,6 +23,7 @@
 	</section>
 
 	<section id="hero">
+		<div class="sectionBG">&nbsp;</div>
 		<h2>Hero:</h2>
 		<div class="charContainer">
 		</div>
@@ -33,14 +35,17 @@
 	</section>
 
 	<section id="opponent">
+		<div class="sectionBG">&nbsp;</div>
 		<h2>Opponent:</h2>
 		<div class="charContainer">
 		</div>
 	</section>
 
 	<section id="message">
-		To begin the game, choose your hero from the characters.
-
+		<div class="sectionBG">&nbsp;</div>
+		<div class="msgText">
+			To begin the game, choose your hero from the characters.
+		</div>
 		<footer>
 		Game created by Jesse Harold, 2016<br>
 		Background Art by Mark Evans
